tests/src/frontend/syntax/invalid/bad_lvalue.sk
fun main(): void {
  { void }.x = 42;
  print_raw("Fail")
}
